<resources>
    <string name="app_name">SuperNazwaApki</string>
    <string name="action_settings">Settings</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="repeat_password_hint">Repeat Password</string>
    <string name="birth_hint">Date of birth</string>
    <string name="login">Login</string>
    <string name="singUp">Sign Up</string>
    <string name="singInText">Don\'t have account yet? Create one!</string>
    <string name="terms">I accept the Terms of Service.</string>
    <string name="title_activity_select_items">SelectItemsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="emptyEmail">Email can\'t be empty</string>
    <string name="wrongEmail">Email format is wrong</string>
    <string name="emptyPassword">Password can\'t be empty</string>
    <string name="wrongPassword">Password must consist of at least 8 characters</string>
    <string name="new_recipe_title_hint">Title</string>
    <string name="new_recipe_summary_hint">Summary</string>
    <string name="new_recipe_description_hint">description</string>
    <string name="new_recipe_preparation_time_hint">Preparation Time (minutes)</string>
    <string name="add_image_from_gallery_text">Gallery</string>
    <string name="add_image_from_camera_text">Camera</string>
    <string name="new_recipe_add_image_textview_text">Add Image</string>
    <string name="sign_out_button_text">sign out</string>
    <string name="add_recipe_button_text">Add recipe</string>
    <string name="complete_add_recipe_button_text">Add Recipe</string>
    <string name="add_products_button_text">Add Products</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
