<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_recipe_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_recipe_title_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_recipe_summary_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_recipe_title_input"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_recipe_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_recipe_summary_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_recipe_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_recipe_summary_input"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_recipe_description_hint"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:maxLines="50"
            android:scrollbars="vertical"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_recipe_preparation_time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_recipe_description_input"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_recipe_preparation_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_recipe_preparation_time_hint"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_recipe_preparation_time_input"
        app:layout_constraintVertical_bias="0.0"
        android:text="@string/new_recipe_add_image_textview_text"
        android:id="@+id/new_recipe_add_image_textview"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_recipe_add_image_textview"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="horizontal"
        android:id="@+id/linear_layout_add_images">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id = "@+id/new_recipe_add_image_from_gallery"
            android:text="@string/add_image_from_gallery_text"
            android:onClick="addImageFromGallery"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id = "@+id/new_recipe_add_image_from_camera"
            android:text="@string/add_image_from_camera_text"
            android:onClick="addImageFromCamera"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_add_images"
        android:id = "@+id/new_recipe_image_preview_imageview"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_recipe_add_image_textview"
        android:text="@string/complete_add_recipe_button_text"
        android:onClick="CompleteAddRecipe"
        />

</android.support.constraint.ConstraintLayout>